--- a/E_CommercePanel/FrmCustomerLogin.resx
+++ b/E_CommercePanel/FrmCustomerLogin.resx
@@ -121,7 +121,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAyAAAAMgCAYAAADbcAZoAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAA/7JJREFUeF7s/QeMJWl97o//hJCFLISQhSyE/rKQhSz+GGOM93Jhf4DXvnuxDRgw
+        vwAADr8BOAVTJAAA/7JJREFUeF7s/QeMJWl97o//hJCFLISQhSyE/rKQhSz+GGOM93Jhf4DXvnuxDRgw
         XvO392Lugu01xhiW3clpJ+ccdnJO53Seme7pHCb25J7ck3tynulJPT2d6vnrebvO7uxbPTMdqs6pOud5
         pI9k4Z3u03Wq3vf71PsN/8//I0mSJIVeAD4B4DMAXnmKHwL4NwCjnsZxnKUA8gFUP4NrCI9aADQ6jrO7
         i89JcgHMADDO/juta0Fesq+bJEmSJEmSJGWsAHzUNRK/TzPhOM7nHcf5IgNnAF8D8C0A33uKNwD8HMCb
@@ -1449,6 +1449,26 @@
         RB+/P/st1OQtSZIkSZIkSfEiAO/3kpC++LjXQH8l6Lb9aWMMTwqChiOOI54XV4K/57/08ftzAID6MCRJ
         kiRJkiRJkiRJkiRJkiRJkiRJkiRJkiRJkiRJkiRJkiRJkiRJkiQpCvr/tuhNu4ER7d8AAAAASUVORK5C
         YII=
+</value>
+  </data>
+  <data name="btnBack.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAA15JREFUeF7t3c2rDXEcx/Hr2S0s3GylLITQtWZBFup6+AdYygoLUlaypiQJSSgR
+        ZeNpi7CQIpJYKUWW5FIs7lu/+p2aPp1zZs6ZmXu/6vNaXt/5qXk3M+eczpwZGTEzM7PKgDFgP3ADeAw8
+        AM4A24BZOm8tSTsbOAL8oLeXwHrd1hoGzMtHRBWTwISuYQ0B5gA3da+X+APs1rWspnxk3NG9DUwBt4AD
+        wHHggw7kKDt0TRtSnxg/ge0yOwpc0UHgFzBenLUh9DlNpR28ReeTfNE/pxsAb4HZOm8VlRwZm3W+KO14
+        4LJuCOzUWaugTowOYAHwTra/pHNWYpjTVC/5/UrRU52xPpo4MoqAPbLOa52xHpqOkXS5uD/UGeuipRjj
+        wF9Z75jOmWgpxmrgm6yX3iCu0FkrmMYYyUmdtYJpjvEo/X86b1mTL207gFXAV10QeA4s1nnLHCMQxwjE
+        MQJxjEAcIxDHCMQxAnGMQBwjEMcIxDECcYxAZiDGEp23zDECcYxAHCMQxwjEMQJxjEAcIxDHCKSlr+qk
+        m2o+6YJ+B16ijRgJsFEXdIwSwNw2YiTAIjldOUYZ4Gxhh3XUjtEBrExf7cz3b4zqv1sBsElL1LmAW03A
+        vS4xhjoy8qlvmf7dKgLmA78lyEGdqwJYC3zOa6Trka8TgwKWS4xkTOeqAK7JOs8cZUANB7mgCznKgHqc
+        sg7pXBU5brd7NRxlEMBd2YF1Luq9bqBxlKqaftmbP7f6ogv6c6sB5F9mU44yU9r46MSnr5ryx+7dfr3N
+        R8pMcZSAHCUgRwnIUQJylIAcJSBHCWgGovjNYxlHCchRAmoxSq9vNzpKGUcJyFECcpSAHCUgRwnIUQJy
+        lIAcJSBHCchRAnKUgBwloDZuKgXW9Pgynn+Mv4ppjnJKZ62LaYziB7pU1VKUdD+8H3k0rJai+KFgdTQd
+        Bdgr67zSGSvR5Eti4Kis8URnrIImjhRgIfBetr+oc1ZRnSj54cTdHuPt56rXMczpKz+++7xuALzx47sb
+        UHKkdHvA/VUdBCaBDcVZq6FPlCngdrqXHjgBfNSB/IZwQte0mvqcvvpJMXbpWtaQfKRUjZJOaT4y2pYv
+        2oeB71qg4AWwTre1FgFLgX3A9fzx+n3gNLA1RdN5MzOz/8E/ULzc7oo7jSIAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
